RESOLVED FIXED126063
[sh4] Missing implementation of branchTest8(ResultCondition, BaseIndex, TrustedImm32) in MacroAssembler
https://bugs.webkit.org/show_bug.cgi?id=126063
Summary [sh4] Missing implementation of branchTest8(ResultCondition, BaseIndex, Trust...
Julien Brianceau
Reported 2013-12-20 03:16:05 PST
sh4 build is broken: [ 11%] Building CXX object Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/jit/JITPropertyAccess.cpp.o /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/jit/JITPropertyAccess.cpp: In member function ‘JSC::AbstractMacroAssembler<JSC::SH4Assembler>::Jump JSC::JIT::checkMarkWord(JSC::AbstractMacroAssembler<JSC::SH4Assembler>::RegisterID, JSC::AbstractMacroAssembler<JSC::SH4Assembler>::RegisterID, JSC::AbstractMacroAssembler<JSC::SH4Assembler>::RegisterID)’: /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/jit/JITPropertyAccess.cpp:885:99: error: no matching function for call to ‘JSC::JIT::branchTest8(JSC::MacroAssemblerSH4::ResultCondition, JSC::AbstractMacroAssembler<JSC::SH4Assembler>::BaseIndex)’ A patch similar to http://trac.webkit.org/changeset/160680 is needed for sh4 architecture.
Attachments
Add branchTest8(ResultCondition, BaseIndex, TrustedImm32) implementation in sh4 macro assembler. (1.55 KB, patch)
2013-12-20 03:20 PST, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2013-12-20 03:20:40 PST
Created attachment 219746 [details] Add branchTest8(ResultCondition, BaseIndex, TrustedImm32) implementation in sh4 macro assembler.
Mark Hahnenberg
Comment 2 2013-12-20 07:17:14 PST
Comment on attachment 219746 [details] Add branchTest8(ResultCondition, BaseIndex, TrustedImm32) implementation in sh4 macro assembler. r=me
WebKit Commit Bot
Comment 3 2013-12-20 07:45:27 PST
Comment on attachment 219746 [details] Add branchTest8(ResultCondition, BaseIndex, TrustedImm32) implementation in sh4 macro assembler. Clearing flags on attachment: 219746 Committed r160912: <http://trac.webkit.org/changeset/160912>
WebKit Commit Bot
Comment 4 2013-12-20 07:45:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.