[sh4] Add missing implementation in MacroAssembler to fix build. https://bugs.webkit.org/show_bug.cgi?id=126063

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-12-20
Reviewed by Mark Hahnenberg.

* assembler/MacroAssemblerSH4.h:
(JSC::MacroAssemblerSH4::branchTest8):

Canonical link: https://commits.webkit.org/144037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160912 268f45cc-cd09-0410-ab3c-d52691b4dbfc